# nyx

./: .gitignore  CMakeLists.txt  README.md
lib/nlayout/: CMakeLists.txt
lib/nlayout/include/nlayout/: nlayout.h  nlayout_err_list.h  nlayout_types.h
lib/nlayout/src/: nlayout_core.cpp  nlayout_extractors.cpp  nlayout_hit_test.cpp  nlayout_internals.hpp  nlayout_mgmt.cpp
lib/nlayout/tests/: nlayout_test.c
lib/nmath/: CMakeLists.txt
lib/nmath/assets/latex/: minimal.mapfile  nmath_latex_fmt.tex  nmath_latex_head.tex  nmath_latex_mini_fmt.tex  nmath_latex_tail.tex
lib/nmath/include/nmath/: nmath.h  nmath_err_list.h  nmath_types.h
lib/nmath/src/: nmath_internals.hpp  nmath_latex.cpp  nmath_latex_preload.cpp  nmath_latex_spawn.cpp  nmath_lualatex.cpp  nmath_lualatex_preload.cpp  nmath_mgmt.cpp  nmath_microtex.cpp  nmath_microtex_skia.cpp
lib/nmath/tests/: nmath_test_internals.h  nmath_test_latex.c  nmath_test_lualatex.c  nmath_test_microtex.c
lib/nyxfs/: CMakeLists.txt
lib/nyxfs/include/nyxfs/: nyxfs.h  nyxfs_err_list.h  nyxfs_types.h
lib/nyxfs/src/: nyxfs_alloc.cpp  nyxfs_expander.cpp  nyxfs_internals.hpp  nyxfs_mgmt.cpp  nyxfs_parser.cpp
